Changes to make the SupersonicVortex problem run.

--- a/Tutorials/dG/HyperbolicSecondOrder_WavesInShells/ConvergencePlate/GNUmakefile
+++ b/Tutorials/dG/HyperbolicSecondOrder_WavesInShells/ConvergencePlate/GNUmakefile
@@ -13,9 +13,14 @@ USE_MPI = TRUE
 USE_CUDA = FALSE
 USE_OMP = TRUE
 
+# LINAER SOLVERS ======================================================
 USE_PARDISO = TRUE
 LDFLAGS += -L../../Pardiso
 LIBRARIES += -lpardiso600-GNU800-X86-64 -lgfortran -fopenmp -lpthread -lm
+
+USE_HYPRE = FALSE
+#HYPRE_DIR = ../../../../../../../Extern/hypre/src/hypre
+# =====================================================================
 
 DIM = 2
 
@@ -27,6 +32,9 @@ include $(AMREX_HOME)/Src/Base/Make.package
 
 include $(AMREX_HOME)/Src/Boundary/Make.package
 include $(AMREX_HOME)/Src/AmrCore/Make.package
+
+#include $(AMREX_HOME)/Src/LinearSolvers/MLMG/Make.package
+#include $(AMREX_HOME)/Src/Extern/HYPRE/Make.package
 
 include $(AMREX_HOME)/Src/dG/Make.package
 
